# Open-Craft

./: .gitignore  Cargo.toml  README.md  build.cmd
src/: main.rs
src/graphic/: context.rs  mod.rs
src/resource/: Settings.rs  mod.rs  settings.rs
