[package]
name = "open-craft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Crates for serializing & deserializing
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"

# Crates for graphics
glium = "0.32"
glam = "0.22"
